crates/forge_domain/src/snapshots/forge_domain__context__tests__update_image_tool_calls_no_tool_results.snap
---
source: crates/forge_domain/src/context.rs
expression: actual
---
messages:
  - text:
      role: System
      content: System message
      tool_calls: ~
      model: ~
      reasoning_details: ~
  - text:
      role: User
      content: User message
      tool_calls: ~
      model: ~
      reasoning_details: ~
  - text:
      role: Assistant
      content: Assistant message
      tool_calls: ~
      model: ~
      reasoning_details: ~
